unpackaged/main/default/objects/Merge_Assistant_Setting__c/Merge_Assistant_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Merge Assistant Settings</label>
</CustomObject>