unpackaged/main/default/objects/Merge_Assistant_Setting__c/fields/Display_all_party_names__c.field-meta.xml
<CustomField>
    <fullName>Display_all_party_names__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this will display all Party names in the caption block. This will use the Role Conjunction value. When not checked, only the 1st party will be displayed along with the Role Suffix.</description>
    <inlineHelpText>When checked, this will display all Party names in the caption block. This will use the Role Conjunction value. When not checked, only the 1st party will be displayed along with the Role Suffix.</inlineHelpText>
    <label>Display all party names</label>
    <type>Checkbox</type>
</CustomField>