unpackaged/main/default/objects/Merge_Assistant_Setting__c/fields/Role_Conjunction_Plural__c.field-meta.xml
<CustomField>
    <fullName>Role_Conjunction_Plural__c</fullName>
    <defaultValue>&quot;and&quot;</defaultValue>
    <description>What is the conjunction to use if you want to string all party names together? Example for &quot;And&quot;: Party1, Party2, and Party3.</description>
    <inlineHelpText>What is the conjunction to use if you want to string all party names together? Example for &quot;And&quot;: Party1, Party2, and Party3.</inlineHelpText>
    <label>Role Conjunction Plural</label>
    <length>255</length>
    <type>Text</type>
</CustomField>