unpackaged/main/default/objects/Merge_Assistant_Setting__c/fields/Role_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Role_Suffix__c</fullName>
    <defaultValue>&quot;et al.&quot;</defaultValue>
    <description>What is the suffix to use if you want to display only the first party and denote there are others still? Example: Party 1, et al.</description>
    <inlineHelpText>What is the suffix to use if you want to display only the first party and denote there are others still? Example: Party 1, et al.</inlineHelpText>
    <label>Role Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>